--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BlogDBCS": "Server=(localdb)\\mssqllocaldb;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Cloudinary": {
+    "CloudName": "dzech1b2s",
+    "ApiKey": "292471637387771",
+    "ApiSecret": "crcHs4M6AxsngMp0ifud6loHnkE"
   }
 }
