--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BlogDBCS": "Server=(localdb)\\mssqllocaldb;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "BlogDBCS": "Server=(localdb)\\mssqllocaldb;Database=BloggieDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "BloggieAuthDBCS": "Server=(localdb)\\mssqllocaldb;Database=BloggieAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Cloudinary": {
     "CloudName": "dzech1b2s",
